--- a/src/assets/css/cardContent.css
+++ b/src/assets/css/cardContent.css
@@ -14,7 +14,7 @@
 }
 
 .featured-info p {
-  font-size: 20px;
+  font-size: 25px;
 }
 
 .featured-info h3 {
@@ -30,7 +30,7 @@
 }
 
 .featured-info h4 {
-  font-size: 20px;
+  font-size: 25px;
   font-weight: 100;
 }
 
@@ -56,7 +56,7 @@
 
 .promotion-price-block p {
   color: red;
-  font-size: 20px;
+  font-size: 25px;
 }
 
 .original-price-block {
