--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -69,6 +69,7 @@ a {
   color: var(--links_color);
   text-decoration: none;
   text-align: center;
+  font-size: 25px;
 }
 
 a:hover {
@@ -102,7 +103,6 @@ nav {
   display: flex;
   justify-content: space-between;
   padding: 0.5rem 0;
-  margin-bottom: 1rem;
 }
 
 .navbar-container {
@@ -155,22 +155,16 @@ form {
   box-shadow: 1px 1px 1px #bababa;
   padding: 4px 10px;
   image-rendering: pixelated;
-  display: block;
+  display: inline-block;
 
   /* font */
-  font-size: 20px;
+  font-size: 25px;
   font-weight: 200;
 }
 
 .btn:hover {
   background-color: var(--hover_color_img);
   cursor: pointer;
-}
-
-#btn-search {
-  padding: 3px 4px;
-  border-top-left-radius: 0%;
-  border-bottom-left-radius: 0%;
 }
 
 #navbar-cart {
@@ -182,15 +176,14 @@ form {
 }
 .cart-badge {
   position: absolute;
-  top: -6px;
-  right: -6px;
-  background-color: #2254dd;
+  top: -9px;
+  right: -13px;
+  background-color: var(--border-card-color);
   color: white;
-  font-size: 0.75rem;
+  font-size: 20px;
   font-weight: bold;
-  border-radius: 50%;
-  width: 10px;
-  height: 10px;
+  width: 15px;
+  height: 15px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -203,19 +196,9 @@ form {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 18px;
+  font-size: 25px;
   color: #fff;
   padding: 10px 0;
-}
-
-@media screen and (max-width: 600px) {
-  .cart-badge {
-    width: 10px;
-    height: 10px;
-    font-size: 0.65rem;
-    top: -4px;
-    right: -4px;
-  }
 }
 
 /* MAIN */
@@ -236,14 +219,15 @@ header {
 header h1 {
   font-size: 80px;
   font-weight: 900;
-  margin-top: -10px;
+  margin-top: -20px;
   color: white;
 }
 
 header h3 {
-  margin-bottom: 20px;
+  margin-bottom: 40px;
   font-weight: 100px;
   color: white;
+  font-size: 30px;
 }
 
 header h1 span {
@@ -266,7 +250,7 @@ header h1 span {
 }
 
 #header-explore p {
-  font-size: 20px;
+  font-size: 25px;
 }
 
 #header-explore img {
@@ -307,7 +291,7 @@ header h1 span {
 
 .card-name h4 {
   color: white;
-  font-size: 22px;
+  font-size: 25px;
   font-weight: 600;
 }
 
@@ -320,7 +304,7 @@ header h1 span {
 .website-card-content {
   padding: 0.7rem 0.7rem;
   background-color: white;
-  font-size: 20px;
+  font-size: 25px;
 }
 
 /* CARD BOTTOM */
@@ -339,7 +323,7 @@ header h1 span {
 }
 
 .website-card-bottom p {
-  font-size: 20px;
+  font-size: 25px;
 }
 
 /* RESPONSIVE SMALLER SCREEN */
@@ -381,4 +365,87 @@ header h1 span {
     opacity: 0;
     transform: translateY(10px);
   }
+}
+
+/* CONTROLS NUMBERS CART */
+
+.xp-label {
+  font-size: 25px;
+  color: #000;
+}
+
+input#qty {
+  width: 50px;
+  margin-top: 0.5rem;
+  margin-left: 0.5rem;
+  padding: 2px 4px;
+  font-size: 25px;
+  border: 1px solid var(--border-color);
+  background-color: #fff;
+  box-shadow: 1px 1px 1px #bababa;
+}
+
+.xp-input:focus {
+  border-color: #0a246a;
+  box-shadow: inset 1px 1px #fff, inset -1px -1px #0a246a;
+}
+
+/*  popup */
+
+.image-popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.4);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+
+/* PRODUCTS PAGE */
+
+.found-products {
+  font-size: 35px;
+  color: white;
+  padding-bottom: 20px;
+}
+
+/* FORM FILTRI */
+
+#form-search {
+  align-items: flex-start;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  gap: 6px;
+  flex-direction: column;
+
+  background-color: rgb(220, 220, 220);
+  padding: 7px 7px;
+  border: 1px solid var(--border-color);
+  box-shadow: 1px 1px 1px #bababa;
+}
+
+.form-top input {
+  height: 20px;
+  width: 180px;
+  font-size: 25px;
+}
+
+.form-top,
+.form-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 15px;
+}
+
+#promoOnly {
+  width: 20px;
+}
+
+.form-bottom label {
+  font-size: 20px;
 }
